# src/controllers/warehouse.controller.js
@@ -1,3 +1,4 @@
+const { SELECT_WAREHOUSE_CHECK, SELECT_WAREHOUSE_CHECK_DETAIL } = require("../configs/warehouse.config")
 const { OK, CREATED } = require("../core/responses/success.response")
 const WarehouseService = require("../services/warehouse.service")
 
@@ -12,6 +13,13 @@ class WarehouseController {
                 filter: req.query.filter ? JSON.parse(req.query.filter) : FILTER_USER.NORMAL_USER, // http://localhost:8386/api/v1/users?filter={"isDeleted":false}
                 select: req.query.select || SELECT_USER.DEFAULT
             })
+        }).send(res)
+    }
+
+    getWarehouse = async (req, res) => {
+        new OK({
+            message: "Get warehouse successfully",
+            metadata: await WarehouseService.getWarehouse({ id: req.params.id })
         }).send(res)
     }
 
@@ -37,6 +45,69 @@ class WarehouseController {
             message: "Delete warehouse successfully",
             metadata: await WarehouseService.deleteWarehouse({ id: req.params.id })
         })
+    }
+
+    getAllWarehouseChecks = async (req, res) => {
+        new OK({
+            message: "Get all warehouse checks successfully",
+            metadata: await WarehouseService.getAllWarehouseChecks({
+                limit: req.query.limit || 10,
+                sort: req.query.sort || 'ctime',
+                page: req.query.page || 1,
+                filter: req.query.filter ? JSON.parse(req.query.filter) : { isDeleted: false },
+                select: req.query.select || SELECT_WAREHOUSE_CHECK.DEFAULT,
+                expand: req.query.expand || 'warehouse manager inventoryStaff'
+            })
+        }).send(res)
+    }
+
+    getWarehouseCheck = async (req, res) => {
+        new OK({
+            message: "Get warehouse check successfully",
+            metadata: await WarehouseService.getWarehouseCheck({ id: req.params.id })
+        }).send(res)
+    }
+
+    createWarehouseCheck = async (req, res) => {
+        new CREATED({
+            message: "Create warehouse check successfully",
+            metadata: await WarehouseService.createWarehouseCheck(req.body)
+        }).send(res)
+    }
+
+    deleteWarehouseCheck = async (req, res) => {
+        new OK({
+            message: "Delete warehouse check successfully",
+            metadata: await WarehouseService.deleteWarehouseCheck({ id: req.params.id })
+        }).send(res)
+    }
+
+    getAllWarehouseCheckDetails = async (req, res) => {
+        new OK({
+            message: "Get all warehouse check details successfully",
+            metadata: await WarehouseService.getAllWarehouseCheckDetails({
+                limit: req.query.limit || 10,
+                sort: req.query.sort || 'ctime',
+                page: req.query.page || 1,
+                filter: req.query.filter ? JSON.parse(req.query.filter) : { isDeleted: false },
+                select: req.query.select || SELECT_WAREHOUSE_CHECK_DETAIL.DEFAULT,
+                expand: req.query.expand || ''
+            })
+        }).send(res)
+    }
+
+    getWarehouseCheckDetail = async (req, res) => {
+        new OK({
+            message: "Get warehouse check detail successfully",
+            metadata: await WarehouseService.getWarehouseCheckDetail({ id: req.params.id })
+        }).send(res)
+    }
+
+    createWarehouseCheckDetail = async (req, res) => {
+        new CREATED({
+            message: "Create warehouse check detail successfully",
+            metadata: await WarehouseService.createWarehouseCheckDetail(req.body)
+        }).send(res)
     }
 }
 
