# src/routes/warehouses/index.js
@@ -21,6 +21,20 @@ router.get("/",
     catchAsyncHandle(warehouseController.getAllWarehouses)
 );
 
+router.get("/:id",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Get warehouse by ID'
+     */
+    /* #swagger.parameters['id'] = {
+        in: 'path',
+        required: true,
+        description: 'Warehouse id',
+        type: 'string'
+    } */
+    catchAsyncHandle(warehouseController.getWarehouse)
+)
+
 router.post("/",
     /**
      * #swagger.tags = ['Warehouse']
@@ -75,6 +89,112 @@ router.delete("/:id",
         type: 'string'
     } */
     catchAsyncHandle(warehouseController.deleteWarehouse)
+)
+
+router.get("/checks-details",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Get all warehouse check details'
+     */
+    /* #swagger.parameters['query'] = {
+        in: 'query',
+        schema: {
+            $ref: "#/components/schemas/GetAllWarehouseCheckDetails"
+        }
+    } */
+    catchAsyncHandle(warehouseController.getAllWarehouseCheckDetails)
+);
+
+router.get("/checks-details/:id",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Get warehouse check detail by ID'
+     */
+    /* #swagger.parameters['id'] = {
+        in: 'path',
+        required: true,
+        description: 'Warehouse check detail id',
+        type: 'string'
+    } */
+    catchAsyncHandle(warehouseController.getWarehouseCheckDetail)
+)
+
+router.post("/check-details",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Create a new warehouse check'
+     */
+    /*  #swagger.requestBody = {
+        content: {
+            "application/json": {
+                schema: {
+                    $ref: "#/components/schemas/CreateWarehouseCheckDetail"
+                }  
+            }
+        }
+    } 
+*/
+    catchAsyncHandle(warehouseController.createWarehouseCheckDetail)
+)
+
+router.get("/checks",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Get all warehouse checks'
+     */
+    /* #swagger.parameters['query'] = {
+        in: 'query',
+        schema: {
+            $ref: "#/components/schemas/GetAllWarehouseChecks"
+        }
+    } */
+    catchAsyncHandle(warehouseController.getAllWarehouseChecks)
+);
+
+router.get("/checks/:id",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Get warehouse check by ID'
+     */
+    /* #swagger.parameters['id'] = {
+        in: 'path',
+        required: true,
+        description: 'Warehouse check id',
+        type: 'string'
+    } */
+    catchAsyncHandle(warehouseController.getWarehouseCheck)
+)
+
+router.post("/checks",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Create a new warehouse check'
+     */
+    /*  #swagger.requestBody = {
+        content: {
+            "application/json": {
+                schema: {
+                    $ref: "#/components/schemas/CreateWarehouseCheck"
+                }  
+            }
+        }
+    } 
+*/
+    catchAsyncHandle(warehouseController.createWarehouseCheck)
+)
+
+router.delete("/checks/:id",
+    /**
+     * #swagger.tags = ['Warehouse']
+     * #swagger.description='Delete warehouse check by ID'
+     */
+    /* #swagger.parameters['id'] = {
+        in: 'path',
+        required: true,
+        description: 'Warehouse check id',
+        type: 'string'
+    } */
+    catchAsyncHandle(warehouseController.deleteWarehouseCheck)
 )
 
 module.exports = router;
